Study variables binding.

--- a/README.org
+++ b/README.org
@@ -15,69 +15,265 @@ For a more general index related to all-things Emacs, use [[https://github.com/e
 
 * Table of Contents                                                     :TOC_5:QUOTE:
 #+BEGIN_QUOTE
+- [[#awesome-elisp][Awesome Elisp]]
 - [[#what-is-elisp][What is Elisp?]]
 - [[#iconography][Iconography]]
 - [[#resources][Resources]]
-  - [[#entry-level][Entry-level]]
-  - [[#advanced][Advanced]]
-  - [[#cookbooks][Cookbooks]]
-  - [[#on-package-authoring][On Package Authoring]]
-  - [[#contributing-to-emacs][Contributing to Emacs]]
+   - [[#entry-level][Entry-level]]
+      - [[#an-introduction-to-programming-in-emacs-lisp][An Introduction to Programming in Emacs Lisp]]
+      - [[#emacs-in-a-box---elisp-programming][Emacs In A Box - Elisp Programming]]
+      - [[#almost-all-you-need-to-know-about-variables][(Almost) All You Need to Know About Variables]]
+      - [[#elisp-guide][elisp-guide]]
+      - [[#emergency-elisp][Emergency Elisp]]
+      - [[#ergoemacs---practical-emacs-lisp][ergoemacs - Practical Emacs Lisp]]
+      - [[#elispcheatsheet][ElispCheatSheet]]
+   - [[#advanced][Advanced]]
+      - [[#emacs-lisp-reference-manual][Emacs Lisp Reference Manual]]
+      - [[#the-emacs-lisp-style-guide][The Emacs Lisp Style Guide]]
+      - [[#the-emacs-package-developers-handbook][The Emacs Package Developer’s Handbook]]
+      - [[#nullprogramcom][nullprogram.com]]
+      - [[#emacs-lisp-programming-thoughts][Emacs Lisp Programming Thoughts]]
+   - [[#cookbooks][Cookbooks]]
+      - [[#elisp-demos][elisp-demos]]
+      - [[#emacs-in-a-box---elisp-snippets][Emacs In A Box - Elisp Snippets]]
+      - [[#emacswikis-cookbook][EmacsWiki's Cookbook]]
+      - [[#alphapapas-unpackagedel][@alphapapa's unpackaged.el]]
+   - [[#on-package-authoring][On Package Authoring]]
+      - [[#article-take-your-emacs-to-the-next-level-by-writing-custom-packages][Article: Take Your Emacs to the Next Level by Writing Custom Packages]]
+      - [[#melpa-recommandations][MELPA recommandations]]
+   - [[#contributing-to-emacs][Contributing to Emacs]]
 - [[#development-tools][Development Tools]]
-  - [[#interactive-development--debugging][Interactive Development & Debugging]]
-  - [[#documentation--introspection][Documentation & Introspection]]
-  - [[#code-editing][Code Editing]]
-    - [[#jump-to-definition][Jump to definition]]
-    - [[#search--replace][Search & Replace]]
-    - [[#editing][Editing]]
-    - [[#editing-s-exps][Editing S-exps]]
-    - [[#refactoring][Refactoring]]
-    - [[#formatting][Formatting]]
-  - [[#testing][Testing]]
-  - [[#profiling][Profiling]]
-  - [[#validation][Validation]]
-  - [[#building][Building]]
-  - [[#syntax-highlighting--visual-enhancements][Syntax Highlighting & Visual Enhancements]]
-  - [[#pretty-printing][Pretty Printing]]
+   - [[#interactive-development--debugging][Interactive Development & Debugging]]
+         - [[#ielm][IELM]]
+         - [[#edebug][edebug]]
+         - [[#trace][trace]]
+         - [[#macrostep][macrostep]]
+         - [[#eval-expr][eval-expr]]
+         - [[#eval-sexp-fu][eval-sexp-fu]]
+         - [[#eros][eros]]
+   - [[#documentation--introspection][Documentation & Introspection]]
+      - [[#helpful][helpful]]
+      - [[#elisp-demos-1][elisp-demos]]
+      - [[#which-key][which-key]]
+      - [[#suggest][suggest]]
+   - [[#code-editing][Code Editing]]
+      - [[#jump-to-definition][Jump to definition]]
+         - [[#elisp-def][elisp-def]]
+      - [[#search--replace][Search & Replace]]
+         - [[#elisp-refs][elisp-refs]]
+         - [[#el-search][el-search]]
+      - [[#editing][Editing]]
+         - [[#speed-of-thought-lisp][speed-of-thought-lisp]]
+         - [[#elisp-docstring][elisp-docstring]]
+      - [[#editing-s-exps][Editing S-exps]]
+         - [[#lispy][lispy]]
+         - [[#symex][symex]]
+         - [[#paxedit][paxedit]]
+         - [[#paredit][paredit]]
+      - [[#refactoring][Refactoring]]
+         - [[#elisp-depmap][elisp-depmap]]
+         - [[#emacs-refactor][emacs-refactor]]
+      - [[#formatting][Formatting]]
+         - [[#aggressive-indent-mode][aggressive-indent-mode]]
+         - [[#elfmt][elfmt]]
+   - [[#testing][Testing]]
+         - [[#ert][ERT]]
+         - [[#buttercup][Buttercup]]
+         - [[#director][director]]
+         - [[#undercover][undercover]]
+   - [[#profiling][Profiling]]
+      - [[#etrace][etrace]]
+   - [[#validation][Validation]]
+         - [[#melpazoid][melpazoid]]
+         - [[#makemsh][makem.sh]]
+         - [[#makel][makel]]
+         - [[#elisp-check][elisp-check]]
+         - [[#auto-compile][auto-compile]]
+         - [[#elisp-lint][elisp-lint]]
+         - [[#elsa][elsa]]
+         - [[#package-lint][package-lint]]
+   - [[#building][Building]]
+         - [[#eldev][Eldev]]
+         - [[#cask][cask]]
+         - [[#emake][emake]]
+         - [[#elisp-repo-kit][Elisp Repo Kit]]
+   - [[#syntax-highlighting--visual-enhancements][Syntax Highlighting & Visual Enhancements]]
+      - [[#lisp-extra-font-lock][lisp-extra-font-lock]]
+      - [[#highlight-function-calls][highlight-function-calls]]
+      - [[#cl-lib-highlight][cl-lib-highlight]]
+      - [[#easy-escape][easy-escape]]
+      - [[#nameless][nameless]]
+   - [[#pretty-printing][Pretty Printing]]
+         - [[#pp][pp]]
+         - [[#ppp][ppp]]
 - [[#libraries][Libraries]]
-  - [[#core--general-purpose][Core / General Purpose]]
-  - [[#data-structures][Data Structures]]
-    - [[#strings][Strings]]
-    - [[#sequences][Sequences]]
-    - [[#maps][Maps]]
-    - [[#custom-types--oop][Custom Types & OOP]]
-    - [[#date--time][Date & Time]]
-    - [[#tables][Tables]]
-    - [[#queues][Queues]]
-    - [[#rings][Rings]]
-    - [[#trees][Trees]]
-    - [[#parsers--parse-trees][Parsers & Parse Trees]]
-    - [[#xmlhtml][XML/HTML]]
-    - [[#org-mode-outlines][Org-mode outlines]]
-    - [[#color-codes][Color Codes]]
-  - [[#concurrency--asynchronicity][Concurrency / Asynchronicity]]
-    - [[#timers][Timers]]
-    - [[#promises--delays][Promises & Delays]]
-    - [[#async-elisp-function-calls][Async Elisp function calls]]
-    - [[#async-sub-processes][Async sub-processes]]
-    - [[#async-interpreter-commands][Async interpreter commands]]
-  - [[#buffer-manipulation][Buffer Manipulation]]
-  - [[#filesystem-interactions][Filesystem Interactions]]
-  - [[#networking][Networking]]
-    - [[#http-client][HTTP client]]
-    - [[#http-server][HTTP server]]
-    - [[#rpc-server][RPC server]]
-    - [[#d-bus][D-Bus]]
-  - [[#database-access][Database Access]]
-  - [[#gui][GUI]]
-    - [[#popups][Popups]]
-    - [[#overlays][Overlays]]
-    - [[#charts--diagrams][Charts & diagrams]]
+   - [[#core--general-purpose][Core / General Purpose]]
+         - [[#cl-lib][cl-lib]]
+         - [[#subr-x][subr-x]]
+         - [[#dash][dash]]
+         - [[#el-patch][el-patch]]
+         - [[#anaphora][anaphora]]
+         - [[#with-simulated-input][with-simulated-input]]
+         - [[#dokey][dokey]]
+         - [[#contract][contract]]
+         - [[#signal][signal]]
+         - [[#weak-ref][weak-ref]]
+         - [[#predd][predd]]
+         - [[#cats][cats]]
+         - [[#fn][fn]]
+   - [[#data-structures][Data Structures]]
+      - [[#strings][Strings]]
+         - [[#subr-x-1][subr-x]]
+         - [[#s][s]]
+         - [[#rx][rx]]
+         - [[#xr][xr]]
+      - [[#sequences][Sequences]]
+         - [[#seq][seq]]
+         - [[#dash-1][dash]]
+         - [[#stream][stream]]
+         - [[#trie][trie]]
+         - [[#lister][lister]]
+      - [[#maps][Maps]]
+         - [[#map][map]]
+         - [[#asoc][asoc]]
+         - [[#ht][ht]]
+         - [[#a][a]]
+         - [[#kv][kv]]
+         - [[#dict-tree][dict-tree]]
+      - [[#custom-types--oop][Custom Types & OOP]]
+         - [[#cl-lib-defstruct-api][cl-lib (defstruct API)]]
+         - [[#eieio][EIEIO]]
+      - [[#date--time][Date & Time]]
+         - [[#ts][ts]]
+         - [[#datetime][datetime]]
+         - [[#datetime-format][datetime-format]]
+      - [[#tables][Tables]]
+         - [[#tabulated-list][tabulated-list]]
+         - [[#tablist][tablist]]
+         - [[#navigel][navigel]]
+         - [[#gridlock][gridlock]]
+         - [[#cell][cell]]
+         - [[#ctable][ctable]]
+      - [[#queues][Queues]]
+         - [[#queue][queue]]
+         - [[#fifo-class][fifo-class]]
+      - [[#rings][Rings]]
+         - [[#ring][ring]]
+         - [[#dynaring][dynaring]]
+      - [[#trees][Trees]]
+         - [[#heap][heap]]
+         - [[#avl-tree][avl-tree]]
+         - [[#hierarchy][hierarchy]]
+         - [[#treepy][treepy]]
+         - [[#taxy][taxy]]
+         - [[#rbit][rbit]]
+         - [[#pair-tree][pair-tree]]
+      - [[#parsers--parse-trees][Parsers & Parse Trees]]
+         - [[#parse-it][parse-it]]
+         - [[#tree-sitter][tree-sitter]]
+         - [[#moldable-emacs][moldable-emacs]]
+         - [[#tnfa][tNFA]]
+         - [[#parsec][parsec]]
+         - [[#pl][pl]]
+      - [[#xmlhtml][XML/HTML]]
+         - [[#dom][dom]]
+         - [[#xml-query][xml-query]]
+      - [[#org-mode-outlines][Org-mode outlines]]
+         - [[#org-element][org-element]]
+         - [[#org-ml][org-ml]]
+         - [[#org-ql][org-ql]]
+         - [[#org-ba][org-ba]]
+      - [[#faces][Faces]]
+         - [[#engrave-faces][engrave-faces]]
+      - [[#color-codes][Color Codes]]
+         - [[#color][color]]
+         - [[#color-tools][color-tools]]
+         - [[#yk-color][yk-color]]
+   - [[#concurrency--asynchronicity][Concurrency / Asynchronicity]]
+      - [[#timers][Timers]]
+         - [[#timer][timer]]
+         - [[#named-timer][named-timer]]
+      - [[#promises--delays][Promises & Delays]]
+         - [[#thunkel][thunk.el]]
+         - [[#promiseel][promise.el]]
+         - [[#aio][aio]]
+      - [[#async-elisp-function-calls][Async Elisp function calls]]
+         - [[#deferred][deferred]]
+         - [[#concurrent][concurrent]]
+         - [[#async][async]]
+         - [[#timp][timp]]
+         - [[#aio-1][aio]]
+         - [[#async-await][async-await]]
+         - [[#lcr][lcr]]
+      - [[#async-sub-processes][Async sub-processes]]
+         - [[#deferred-1][deferred]]
+         - [[#bpr][bpr]]
+         - [[#pfuture][pfuture]]
+      - [[#async-interpreter-commands][Async interpreter commands]]
+         - [[#dtache][dtache]]
+         - [[#friendly-shell-command][friendly-shell-command]]
+   - [[#buffer-manipulation][Buffer Manipulation]]
+         - [[#b][b]]
+         - [[#tp][tp]]
+         - [[#m-buffer][m-buffer]]
+   - [[#filesystem-interactions][Filesystem Interactions]]
+      - [[#f][f]]
+   - [[#networking][Networking]]
+      - [[#http-client][HTTP client]]
+         - [[#request][request]]
+         - [[#plz][plz]]
+         - [[#mb-url][mb-url]]
+         - [[#websocket][websocket]]
+         - [[#apiwrap][apiwrap]]
+         - [[#with-proxy][with-proxy]]
+      - [[#http-server][HTTP server]]
+         - [[#simple-httpd][simple-httpd]]
+         - [[#web-server][web-server]]
+      - [[#rpc-server][RPC server]]
+         - [[#porthole][porthole]]
+         - [[#epc][EPC]]
+      - [[#d-bus][D-Bus]]
+         - [[#dbus][dbus]]
+         - [[#debase][debase]]
+   - [[#database-access][Database Access]]
+      - [[#sql][SQL]]
+         - [[#sql-1][sql]]
+         - [[#sqlite][sqlite]]
+         - [[#emacsql][emacsql]]
+         - [[#closql][closql]]
+         - [[#edbi][edbi]]
+         - [[#triples][triples]]
+   - [[#gui][GUI]]
+      - [[#popups][Popups]]
+         - [[#frog-menu][frog-menu]]
+      - [[#overlays][Overlays]]
+         - [[#ov][ov]]
+      - [[#charts--diagrams][Charts & diagrams]]
+         - [[#chart][chart]]
 - [[#heroes][Heroes]]
+   - [[#alphapapa][@alphapapa]]
+   - [[#bozhidar-batsov-bbatsov][Bozhidar Batsov (@bbatsov)]]
+   - [[#caio-rordrigues-caiorss][Caio Rordrigues (@caiorss)]]
+   - [[#chris-wellons-skeeto][Chris Wellons (@skeeto)]]
+   - [[#john-wiegley-jwiegley][John Wiegley (@jwiegley)]]
+   - [[#jonas-bernoulli-tarsius][Jonas Bernoulli (@tarsius)]]
+   - [[#magnar-sveen-magnars][Magnar Sveen (@magnars)]]
+   - [[#nicolas-petton][Nicolas Petton]]
+   - [[#oleh-krehel-abo-abo][Oleh Krehel (@abo-abo)]]
+   - [[#toby-qubit-cubitt][Toby 'qubit' Cubitt]]
+   - [[#xah-lee][Xah Lee]]
 - [[#contributing][Contributing]]
-- [[#license][License]]
+   - [[#guidelines][Guidelines]]
+      - [[#pr-and-issues][PR and Issues]]
+      - [[#opinions][Opinions]]
+      - [[#scope][Scope]]
+         - [[#relevant-content-development-tools][Relevant Content: Development Tools]]
+         - [[#relevant-content-libraries][Relevant Content: Libraries]]
+      - [[#comments][Comments]]
+      - [[#order-of-tools--libraries][Order of Tools & Libraries]]
+      - [[#order-of-categories][Order of Categories]]
+- [[#license--acknowledgments][License & Acknowledgments]]
 #+END_QUOTE
-
 
 * What is Elisp?
 
@@ -128,7 +324,12 @@ For a more general index related to all-things Emacs, use [[https://github.com/e
 
     Written by [[#caio-rordrigues-caiorss][Caio Rordrigues (@caiorss)]].
 
-*** (Almost) All You Need to Know About Variables
+*** DONE (Almost) All You Need to Know About Variables
+CLOSED: [2024-01-09 Tue 16:25]
+:LOGBOOK:
+- State "DONE"       from              [2024-01-09 Tue 16:25] \\
+  Very useful.
+:END:
 
     [[https://opensource.com/article/20/3/variables-emacs][read online]]
 
