--- a/README.org
+++ b/README.org
@@ -324,7 +324,7 @@ For a more general index related to all-things Emacs, use [[https://github.com/e
 
     Written by [[#caio-rordrigues-caiorss][Caio Rordrigues (@caiorss)]].
 
-*** DONE (Almost) All You Need to Know About Variables
+*** DONE [#A] (Almost) All You Need to Know About Variables
 CLOSED: [2024-01-09 Tue 16:25]
 :LOGBOOK:
 - State "DONE"       from              [2024-01-09 Tue 16:25] \\
@@ -343,7 +343,11 @@ CLOSED: [2024-01-09 Tue 16:25]
     Focused on introducing general concepts and terminology.
 
 
-*** Emergency Elisp
+*** [#A] Emergency Elisp
+:LOGBOOK:
+- Note taken on [2024-01-17 Wed 16:37] \\
+  I like simple OOP
+:END:
 
     [[http://steve-yegge.blogspot.com/2008/01/emergency-elisp.html][read online]]
 
@@ -351,7 +355,11 @@ CLOSED: [2024-01-09 Tue 16:25]
     More like a cheat sheet.
 
 
-*** ergoemacs - Practical Emacs Lisp
+*** [#A] ergoemacs - Practical Emacs Lisp
+:LOGBOOK:
+- Note taken on [2024-01-17 Wed 16:39] \\
+  李杀的lisp教程
+:END:
 
     [[http://xahlee.info/emacs/emacs/elisp.html][read online]]
 
@@ -364,7 +372,11 @@ CLOSED: [2024-01-09 Tue 16:25]
     To Xah's defense, some packages now considered standard are also written this way (we're looking at you =ediff=).
 
 
-*** ElispCheatSheet
+*** [#A] ElispCheatSheet
+:LOGBOOK:
+- Note taken on [2024-01-17 Wed 17:01] \\
+  深入理解了lambda的使用
+:END:
 
     [[https://alhassy.github.io/ElispCheatSheet/][read online]], [[https://github.com/alhassy/ElispCheatSheet][source]]
 
